--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_es.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_es.properties
@@ -21,5 +21,5 @@ skypeCall = Llamada de Skype
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(340?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+localPhoneRegEx = (\\+\\(34\\))?(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{2}(-?\\s?\\)?\\.?)+\\d{2}(-?\\s?\\)?\\.?)+\\d{2}
 countryCode=34
