Bug: 56521        check in 9 languages for 6.0.11 into GNR branch
http://bugzilla.zimbra.com/show_bug.cgi?id=56521

Copied from Perforce
 Change: 276166

--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_da.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_da.properties
@@ -15,10 +15,11 @@
 search = S\u00f8g
 addToContacts = F\u00f8j til kontakter
 skypeCall = Skype-opkald
+call = Opkald
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(45)?)(-?\\s?\\)?\\.?)(\\d?\\s?){8}
-countryCode=45
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
