--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_en_GB.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_en_GB.properties
@@ -17,11 +17,9 @@ addToContacts = Add To Contacts
 skypeCall = Skype Call
 call = Call
 
-
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-#http://en.wikipedia.org/wiki/Telephone_numbers_in_the_United_Kingdom
-localPhoneRegEx = (\\+?(44)?)(-?\\s?\\)?\\.?)(\\(?)\\d{2,5}(-?\\s?\\)?\\.?)+\\d{3,6}(-?\\s?\\.?)(\\d{4})?
-countryCode=44
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
