--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_hi.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_hi.properties
@@ -14,11 +14,12 @@
 # 
 search = \u0916\u094b\u091c\u0947\u0902
 addToContacts = \u0938\u0902\u092a\u0930\u094d\u0915 \u092e\u0947\u0902 \u091c\u094b\u0921\u093c\u0947\u0902
-skypeCall = \u0938\u094d\u200d\u0915\u093e\u0907\u092a\u0940 \u0915\u0949\u0932
+skypeCall = Skype \u0915\u0949\u0932
+call = \u0915\u0949\u0932 \u0915\u0930\u0947\u0902
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx =  (\\+?(91)?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{4}(-?\\s?\\.?)\\d{4}
-countryCode=91
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
