--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_it.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_it.properties
@@ -15,10 +15,11 @@
 search = Cerca
 addToContacts = Aggiungi ai contatti
 skypeCall = Chiamata Skype
+call = Chiama
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx =  (\\+?(39)?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{3,4}
-countryCode=39
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
