--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_pt_BR.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_pt_BR.properties
@@ -14,11 +14,12 @@
 # 
 search = Buscar
 addToContacts = Adicionar aos contatos
-skypeCall = Liga\u00e7\u00e3o do Skype
+skypeCall = Chamada do Skype
+call = Chamar
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(\d{351})?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
-countryCode=351
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
