--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_sv.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_sv.properties
@@ -15,10 +15,11 @@
 search = S\u00f6k
 addToContacts = L\u00e4gg till kontakt
 skypeCall = Skype-samtal
+call = Ring
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(\d{503})?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
-countryCode=503 
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
