--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_nl.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_nl.properties
@@ -14,11 +14,12 @@
 # 
 search = Zoeken
 addToContacts = Aan contacten toevoegen
-skypeCall = Skype-gesprek
+skypeCall = Skype-oproep
+call = Bellen
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(31)?)(-?\\s?\\)?\\.?)(\\(?)\\d{1,4}(-?\\s?\\)?\\.?)+\\d{6,8}
-countryCode=31
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
