--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_ru.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_ru.properties
@@ -15,11 +15,11 @@
 search = \u041f\u043e\u0438\u0441\u043a
 addToContacts = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u0432 \u043a\u043e\u043d\u0442\u0430\u043a\u0442\u044b
 skypeCall = \u0417\u0432\u043e\u043d\u043e\u043a Skype
-
+call = \u0412\u044b\u0437\u043e\u0432
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(7)?)(-?\\s?\\)?\\.?)(\\(?)\\d{3,5}(-?\\s?\\)?\\.?)+\\d{1,3}(-?\\s?\\.?)\\d{2,4}((-?\\s?\\.?)\\d{2})?
-countryCode=7
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
