--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_zh_HK.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_zh_HK.properties
@@ -14,12 +14,12 @@
 # 
 search = \u641c\u5c0b
 addToContacts = \u52a0\u5165\u806f\u7d61\u4eba\u8cc7\u6599\u593e
-skypeCall = \u7528 Skype \u901a\u8a71
+skypeCall = Skype\u96fb\u8a71
+call = \u81f4\u96fb
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(852)?)(-?\\s?\\)?\\.?)(\\(?)\\d{4}(-?\\s?\\)?\\.?)+\\d{4}
-countryCode=852
-
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
