Bug: 56521        check in 10 languages for 6.0.11 files into GNR
http://bugzilla.zimbra.com/show_bug.cgi?id=56521

Copied from Perforce
 Change: 276169

--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_de.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_de.properties
@@ -15,10 +15,11 @@
 search = Suchen
 addToContacts = Zu Kontakten hinzuf\u00fcgen
 skypeCall = Skype-Anruf
+call = Anruf
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(49)?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
-countryCode=49
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
