--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_ko.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_ko.properties
@@ -15,10 +15,11 @@
 search = \uac80\uc0c9
 addToContacts = \uc5f0\ub77d\ucc98 \ucd94\uac00
 skypeCall = Skype \ud1b5\ud654
+call = \ud1b5\ud654
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx =  (\\+?(82)?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
-countryCode=82
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
