--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_pl.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_pl.properties
@@ -15,10 +15,11 @@
 search = Wyszukaj
 addToContacts = Dodaj do kontakt\u00f3w
 skypeCall = Rozmowa Skype
+call = Rozmowa
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(\d{48})?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
-countryCode=48
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
