--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_ar.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_ar.properties
@@ -15,11 +15,11 @@
 search = \u0627\u0644\u0628\u062d\u062b
 addToContacts = \u0625\u0636\u0627\u0641\u0629 \u0625\u0644\u0649 \u062c\u0647\u0627\u062a \u0627\u0644\u0627\u062a\u0635\u0627\u0644
 skypeCall = \u0645\u0643\u0627\u0644\u0645\u0629 Skype
-
+call = \u0645\u0643\u0627\u0644\u0645\u0629
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(\d{966})?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
-countryCode=966
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
