--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_en_AU.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_en_AU.properties
@@ -15,13 +15,11 @@
 search = Search
 addToContacts = Add To Contacts
 skypeCall = Skype Call
-
-
+call = Call
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-#http://en.wikipedia.org/wiki/Telephone_numbering_plan
-localPhoneRegEx = (\\+?(61)?)(-?\\s?\\)?\\.?)(\\(?)\\d{1,2}(-?\\s?\\)?\\.?)+\\d{4}(-?\\s?\\.?)\\d{4}
-countryCode=61
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
