--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_fr.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_fr.properties
@@ -15,11 +15,11 @@
 search = Rechercher
 addToContacts = Ajouter aux contacts
 skypeCall = Appel Skype
-
+call = Appel
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx =  (\\+?(33)?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
-countryCode=33
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
