--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_ja.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_ja.properties
@@ -15,10 +15,11 @@
 search = \u691c\u7d22
 addToContacts = \u9023\u7d61\u5148\u306b\u8ffd\u52a0
 skypeCall = Skype\u901a\u8a71
+call = \u901a\u8a71
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(81)?)(-?\\s?\\)?\\.?)(\\(?)\\d{2}(-?\\s?\\)?\\.?)+\\d{4}(-?\\s?\\.?)\\d{4}|\\d{4}(-)+\\d{4}
-countryCode=81
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
