--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_tr.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_tr.properties
@@ -15,10 +15,11 @@
 search = Ara
 addToContacts = Ki\u015filere Ekle
 skypeCall = Skype \u00c7a\u011fr\u0131s\u0131
+call = Ara
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-localPhoneRegEx = (\\+?(90)?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
-countryCode=90
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
