--- a/src/zimlet/com_zimbra_phone/com_zimbra_phone_zh_CN.properties
+++ b/src/zimlet/com_zimbra_phone/com_zimbra_phone_zh_CN.properties
@@ -15,12 +15,11 @@
 search = \u641c\u7d22
 addToContacts = \u6dfb\u52a0\u5230\u8054\u7cfb\u4eba
 skypeCall = \u7528 Skype \u901a\u8bdd
+call = \u81f4\u7535
 
 #########################################
 #Don't localize any of the below strings.
 #########################################
 #Country/language specific regEx.
-#http://en.wikipedia.org/wiki/Telephone_numbers_in_China
-#simply match country code + 8 or 11 digit numbers (big cities only)
-localPhoneRegEx = (\\+?(86)?)(-?\\s?\\)?\\.?)^(\\d{11}|\\d{8})$
-countryCode=86
+localPhoneRegEx = (\\+?1?)(-?\\s?\\)?\\.?)(\\(?)\\d{3}(-?\\s?\\)?\\.?)+\\d{3}(-?\\s?\\.?)\\d{4}
+countryCode=1
