bug:58442 - Fix Zipcode - Also add Australian State names to specifically identify them
http://bugzilla.zimbra.com/show_bug.cgi?id=58442

Copied from Perforce
 Change: 284595

--- a/src/zimlet/com_zimbra_gmaps/com_zimbra_gmaps_en_AU.properties
+++ b/src/zimlet/com_zimbra_gmaps/com_zimbra_gmaps_en_AU.properties
@@ -40,7 +40,7 @@ completeAddressRegex =
 #Matches a word with numbers followed by up to 9 words. PS: This will be concatinated with zipCodeRegEx.
 #E.x. 1500 fashion island blvd, suite 200
 ###########################################################################################
-addressFirstPartRegEx = (\\d-?)+,?\\s((\\w?\\.?\\,?\\#?)+\\s){2,9}
+addressFirstPartRegEx = (\\d-?)+,?\\s((\\w?\\,?)+\\s){2,5}(\\s?\\,?){1,2}
 
 ###########################################################################################
 #zipCodeRegEx allows matching zip codes.
@@ -56,8 +56,7 @@ addressFirstPartRegEx = (\\d-?)+,?\\s((\\w?\\.?\\,?\\#?)+\\s){2,9}
 #The following matches Canadian and EU zip codes which is 2, 3-letters alpha-numeric words  for example: "7L7 T2E"
 #(([a-zA-Z]{1,2}\\d{1,2}[a-zA-Z]{1,2}\\s?)|(\\d{1,2}[a-zA-Z]{1,2}\\d{1,2}\\s?))+
 
-zipCodeRegEx = (\\d{5,7}(-\\d{4,5})?)|(([a-zA-Z]{1,2}\\d{1,2}[a-zA-Z]{1,2}\\s?)|(\\d{1,2}[a-zA-Z]{1,2}\\d{1,2}\\s?))+
-
+zipCodeRegEx = (NSW|New South Wales|Australian Capital Territory|Victoria|Queensland|South Australia|Western Australia|Tasmania|Northern Territory|ACT|VIC|QLD|SA|WA|TAS|NT|\\d{4})
 
 #Matches Country names. Used instead of zip code and when they are missing.
 countryNameRegEx = (Austria|Belgium|Bulgaria|Croatia|CzechRepublic|Denmark|Finland|France|Germany|Hungary|Ireland|Italy|Netherlands|Norway|Poland|Portugal|Romania|Russia|Spain|Sweden|Switzerland|UK|Canada|USA)
