Bug: 59146 check in 9 locales for 7.1.1 ui drop 1
http://bugzilla.zimbra.com/show_bug.cgi?id=59146

Copied from Perforce
 Change: 300060

--- a/src/zimlet/com_zimbra_date/com_zimbra_date_sv.properties
+++ b/src/zimlet/com_zimbra_date/com_zimbra_date_sv.properties
@@ -185,8 +185,8 @@ format15.pattern = {monthname} {yearnum}
 format15.rule = now year={yearnum},{monthname},1
 
 # e.g. Thurs
-format16.pattern = {dayname}
-format16.rule = now +1 {dayname}
+format16.pattern = #
+format16.rule = #
 
 # e.g. 16th Jan, 1973
 format17.pattern = {datenum}(:a|:a|:e|:e)? {monthname}.? {yearnum}
