Bug: 60756 check in the 9 locales into Helix for Appliance-711
http://bugzilla.zimbra.com/show_bug.cgi?id=60756

Copied from Perforce
 Change: 320242

--- a/src/zimlet/com_zimbra_social/com_zimbra_social_da.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_da.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Send direkte/privat meddelelse:
 whatAreYouDoing = Hvad laver du?
 undo = fortryd
 autoShortenUrl = Forkort URL automatisk
-updateTo = opdater til: 
+updateTo = Opdater til:
 noAccountsMsg = Der blev ikke fundet nogen konti. Klik p\u00e5 'Tilf\u00f8j/fjern konti' for at tilf\u00f8je en 
 moveLeft = Flyt denne forsyning til venstre
 moveRight = Flyt denne forsyning til h\u00f8jre
@@ -35,6 +35,7 @@ twitterSearches = Twitter-s\u00f8gninger
 preferences = Pr\u00e6ferencer
 whatAreYouDoing = Hvad laver du?
 moreThan140Chars = Mere end 140 tegn er ikke tilladt
+moreThan420Chars = Der m\u00e5 ikke anvendes mere end 420 tegn
 pleaseSelectAnAccount = V\u00e6lg en konto for at sende
 noDataFound = Der blev ikke fundet nogen data
 clickForOlderMsgs = Kik her for at se \u00e6ldre meddelelser
@@ -118,10 +119,13 @@ twitterPinInvalid = PIN-kode til Twitter er UGYLDIG, pr\u00f8v igen.
 addRemoveAccounts = Tilf\u00f8j/fjern konti
 addTwitterAcc = Tilf\u00f8j Twitter-konto
 addFacebookAcc = Tilf\u00f8j Facebook-konto
+addAccounts = Tilf\u00f8j konti
+accountActivated = Konto aktiveret
+addSocialcastAcc = Tilf\u00f8j Socialcast-konto
 deleteAcc = Slet konto
 refreshAcc = Opdater konto
 manageAccounts = Administrer konti
-authorizeZimbraToAccessFacebook = Log p\u00e5 Facebook, og godkend Zimbra
+deleteAndReaddFBAccount = Godkendelse mislykkedes. Slet Facebook-konto, og tilf\u00f8j igen
 accountsUpdated = Konti er blevet opdateret
 accountType = Type
 accountName = Konto
@@ -134,6 +138,13 @@ goToFacebook = G\u00e5 til Facebook
 loadPermissions = Indl\u00e6s tilladelser
 goToTwitter = G\u00e5 til Twitter
 enterTwitterPin = Indtast PIN-kode til Twitter
+
+#socialcast add account dialog
+addSocialcastAccount = Tilf\u00f8j Socialcast-konto
+socialcastEmail = Socialcast-e-mail
+socialcastPassword = Socialcast-adgangskode
+socialcastServer = Socialcast-server
+couldNotAuthenticateSocialcastAccnt = Kunne ikke godkende Socialcast-konto
 
 #Facebook Signin steps
 fbSigninSteps = Trin for at tilf\u00f8je Facebook-konto:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Kunne ikke f\u00f8je 'ligesom' (Like) til Facebook
 couldNotGetComments = Kunne ikke hente kommentarer
 seeAllComments = Se alle {0} kommentarer
 
+#socialcast
+couldNotAddCommentToSC =   Kunne ikke tilf\u00f8je kommentar til Socialcast
 #digg
 diggError = Digg-fejl: 
 
