--- a/src/zimlet/com_zimbra_social/com_zimbra_social_nl.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_nl.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Direct bericht/priv\u00e9bericht verzenden:
 whatAreYouDoing = Wat ben je aan het doen?
 undo = ongedaan maken
 autoShortenUrl = URL automatisch inkorten
-updateTo = bijwerken naar: 
+updateTo = Bijwerken naar:
 noAccountsMsg = Geen accounts gevonden. Klik op 'Accounts toevoegen/verwijderen' om er \u00e9\u00e9n toe te voegen 
 moveLeft = Dit kanaal naar links verplaatsen
 moveRight = Dit kanaal naar rechts verplaatsen
@@ -35,6 +35,7 @@ twitterSearches = Zoekopdrachten in Twitter
 preferences = Sneltoetsen in Voorkeuren
 whatAreYouDoing = Wat ben je aan het doen?
 moreThan140Chars = Meer dan 140 tekens is niet toegestaan
+moreThan420Chars = Meer dan 420 tekens is niet toegestaan
 pleaseSelectAnAccount = Select een account om te verzenden
 noDataFound = Geen gegevens gevonden
 clickForOlderMsgs = Klik hier om oudere berichten te bekijken
@@ -118,10 +119,13 @@ twitterPinInvalid = Pincode voor Twitter is ONGELDIG. Probeer het opnieuw
 addRemoveAccounts = Accounts toevoegen/verwijderen
 addTwitterAcc = Twitter-account toevoegen
 addFacebookAcc = Facebook-account toevoegen
+addAccounts = Accounts toevoegen
+accountActivated = Account geactiveerd
+addSocialcastAcc = Socialcast-account toevoegen
 deleteAcc = Account verwijderen
 refreshAcc = Account vernieuwen
 manageAccounts = Accounts beheren
-authorizeZimbraToAccessFacebook = Meld je aan bij Facebook en machtig Zimbra
+deleteAndReaddFBAccount = Verificatie mislukt. Verwijder Facebook-account en voeg opnieuw toe
 accountsUpdated = Bijwerken van accounts is geslaagd
 accountType = Type
 accountName = Account
@@ -134,6 +138,13 @@ goToFacebook = Naar Facebook gaan
 loadPermissions = Laadmachtigingen
 goToTwitter = Naar Twitter gaan
 enterTwitterPin = Pincode voor Twitter invoeren
+
+#socialcast add account dialog
+addSocialcastAccount = Socialcast-account toevoegen
+socialcastEmail = E-mail Socialcast
+socialcastPassword = Wachtwoord Socialcast
+socialcastServer = Socialcast-server
+couldNotAuthenticateSocialcastAccnt = Kan Socialcast-account niet verifi\u00ebren
 
 #Facebook Signin steps
 fbSigninSteps = Stappen voor toevoegen Facebook-account:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Kon geen vergelijkbaar item toevoegen aan Facebook
 couldNotGetComments = Kon geen opmerkingen ophalen
 seeAllComments = Bekijk alle {0} opmerkingen
 
+#socialcast
+couldNotAddCommentToSC =   Kan geen opmerking toevoegen aan Socialcast
 #digg
 diggError = Digg-fout: 
 
