--- a/src/zimlet/com_zimbra_social/com_zimbra_social_sv.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_sv.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Skicka direktmeddelande/privat meddelande:
 whatAreYouDoing = Vad g\u00f6r du?
 undo = \u00e5ngra
 autoShortenUrl = F\u00f6rkorta URL automatiskt
-updateTo = uppdatera till: 
+updateTo = Uppdatera till:
 noAccountsMsg = Det gick inte att hitta n\u00e5gra konton. Klicka p\u00e5 L\u00e4gg till/ta bort konton om du vill l\u00e4gga till ett konto 
 moveLeft = Flytta det h\u00e4r fl\u00f6det \u00e5t v\u00e4nster
 moveRight = Flytta det h\u00e4r fl\u00f6det \u00e5t h\u00f6ger
@@ -35,6 +35,7 @@ twitterSearches = Twitter-s\u00f6kningar
 preferences = Inst\u00e4llningar
 whatAreYouDoing = Vad g\u00f6r du?
 moreThan140Chars = Det \u00e4r inte till\u00e5tet att anv\u00e4nda fler \u00e4n 140 tecken
+moreThan420Chars = Maximalt 420 tecken \u00e4r till\u00e5tna
 pleaseSelectAnAccount = Ange ett konto som ska skickas
 noDataFound = Det gick inte att hitta n\u00e5gra data
 clickForOlderMsgs = Klicka h\u00e4r om du vill visa \u00e4ldre meddelanden
@@ -118,10 +119,13 @@ twitterPinInvalid = PIN-koden f\u00f6r Twitter \u00e4r OGILTIG, f\u00f6rs\u00f6k
 addRemoveAccounts = L\u00e4gg till/ta bort konton
 addTwitterAcc = L\u00e4gg till ett Twitter-konto
 addFacebookAcc = L\u00e4gg till ett Facebook-konto
+addAccounts = L\u00e4gg till konton
+accountActivated = Kontot har aktiverats
+addSocialcastAcc = L\u00e4gg till Socialcast-konto
 deleteAcc = Ta bort konto
 refreshAcc = Uppdatera konto
 manageAccounts = Hantera konton
-authorizeZimbraToAccessFacebook = Logga in p\u00e5 Facebook och auktorisera Zimbra
+deleteAndReaddFBAccount = Auktoriseringen misslyckades. Ta bort Facebook-kontot och l\u00e4gg till det p\u00e5 nytt
 accountsUpdated = Konton har uppdaterats
 accountType = Typ
 accountName = Konto
@@ -134,6 +138,13 @@ goToFacebook = G\u00e5 till Facebook
 loadPermissions = L\u00e4s in beh\u00f6righeter
 goToTwitter = G\u00e5 till Twitter
 enterTwitterPin = Ange PIN-kod f\u00f6r Twitter
+
+#socialcast add account dialog
+addSocialcastAccount = L\u00e4gg till Socialcast-konto
+socialcastEmail = E-postadress f\u00f6r Socialcast
+socialcastPassword = L\u00f6senord f\u00f6r Socialcast
+socialcastServer = Socialcast-server
+couldNotAuthenticateSocialcastAccnt = Det gick inte att autentisera Socialcast-kontot
 
 #Facebook Signin steps
 fbSigninSteps = Instruktioner f\u00f6r att l\u00e4gga till ett Facebook-konto:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Det gick inte att l\u00e4gga till "Gillar" i Facebook
 couldNotGetComments = Det gick inte att h\u00e4mta kommentarer
 seeAllComments = Se alla {0} kommentarer
 
+#socialcast
+couldNotAddCommentToSC =   Det gick inte att l\u00e4gga till kommentaren till Socialcast
 #digg
 diggError = Digg-fel: 
 
