--- a/src/zimlet/com_zimbra_social/com_zimbra_social_zh_HK.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_zh_HK.properties
@@ -23,7 +23,7 @@ sendDirectMsg = \u50b3\u9001\u79c1\u5bc6/\u79c1\u4eba\u90f5\u4ef6\uff1a
 whatAreYouDoing = \u4f60\u5728\u505a\u4ec0\u9ebc\uff1f
 undo = \u53d6\u6d88
 autoShortenUrl = \u81ea\u52d5\u7e2e\u77ed URL
-updateTo = \u66f4\u65b0\u81f3\uff1a 
+updateTo = \u66f4\u65b0\u81f3\uff1a
 noAccountsMsg = \u672a\u627e\u5230\u5e33\u6236\u3002\u6309\u4e0b\u300e\u52a0\u5165/\u79fb\u9664\u5e33\u6236\u300f\u52a0\u5165\u5e33\u6236 
 moveLeft = \u5de6\u79fb\u8a72 Feed
 moveRight = \u53f3\u79fb\u8a72 Feed
@@ -35,6 +35,7 @@ twitterSearches = Twitter \u641c\u5c0b
 preferences = \u504f\u597d\u8a2d\u5b9a
 whatAreYouDoing = \u4f60\u5728\u505a\u4ec0\u9ebc\uff1f
 moreThan140Chars = \u4e0d\u5f97\u8d85\u904e 140 \u500b\u5b57\u5143
+moreThan420Chars = \u4e0d\u5f97\u8d85\u904e 420 \u500b\u5b57\u5143
 pleaseSelectAnAccount = \u8acb\u9078\u64c7\u4e00\u500b\u5e33\u6236\u4ee5\u50b3\u9001
 noDataFound = \u672a\u627e\u5230\u8cc7\u6599
 clickForOlderMsgs = \u6309\u4e0b\u6b64\u8655\u67e5\u770b\u820a\u90f5\u4ef6
@@ -118,10 +119,13 @@ twitterPinInvalid = Twitter PIN \u7121\u6548\uff0c\u8acb\u518d\u8a66\u4e00\u6b21
 addRemoveAccounts = \u52a0\u5165/\u79fb\u9664\u5e33\u6236
 addTwitterAcc = \u52a0\u5165 Twitter \u5e33\u6236
 addFacebookAcc = \u52a0\u5165 Facebook \u5e33\u6236
+addAccounts = \u52a0\u5165\u5e33\u6236
+accountActivated = \u5df2\u555f\u7528\u7684\u5e33\u6236
+addSocialcastAcc = \u52a0\u5165 Socialcast \u5e33\u6236
 deleteAcc = \u522a\u9664\u5e33\u6236
 refreshAcc = \u91cd\u65b0\u6574\u7406\u5e33\u6236
 manageAccounts = \u5e33\u6236\u7ba1\u7406
-authorizeZimbraToAccessFacebook = \u8acb\u767b\u5165 Facebook \u53ca\u6388\u6b0a Zimbra
+deleteAndReaddFBAccount = \u6388\u6b0a\u5931\u6557\u3002\u8acb\u522a\u9664 Facebook \u5e33\u6236\u4e26\u91cd\u65b0\u6dfb\u52a0
 accountsUpdated = \u5e33\u6236\u5df2\u6210\u529f\u66f4\u65b0
 accountType = \u985e\u578b
 accountName = \u5e33\u6236
@@ -134,6 +138,13 @@ goToFacebook = \u524d\u5f80 Facebook
 loadPermissions = \u8f09\u5165\u6b0a\u9650
 goToTwitter = \u524d\u5f80 Twitter
 enterTwitterPin = \u8f38\u5165 Twitter PIN
+
+#socialcast add account dialog
+addSocialcastAccount = \u52a0\u5165 Socialcast \u5e33\u6236
+socialcastEmail = Socialcast \u96fb\u90f5
+socialcastPassword = Socialcast \u5bc6\u78bc
+socialcastServer = Socialcast \u4f3a\u670d\u5668
+couldNotAuthenticateSocialcastAccnt = \u7121\u6cd5\u8a8d\u8b49 Socialcast \u5e33\u6236
 
 #Facebook Signin steps
 fbSigninSteps = \u52a0\u5165 Facebook \u5e33\u6236\u7684\u6b65\u9a5f\uff1a
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = \u7121\u6cd5\u52a0\u5165\u300e\u95dc\u6ce8\u300f\u81f3 Fac
 couldNotGetComments = \u7121\u6cd5\u7372\u53d6\u8a3b\u91cb
 seeAllComments = \u67e5\u770b\u6240\u6709 {0} \u689d\u8a55\u8ad6
 
+#socialcast
+couldNotAddCommentToSC =   \u7121\u6cd5\u52a0\u5165\u8a3b\u91cb\u81f3 Socialcast
 #digg
 diggError = Digg \u932f\u8aa4\uff1a 
 
