--- a/src/zimlet/com_zimbra_social/com_zimbra_social_it.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_it.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Invia messaggio diretto/privato:
 whatAreYouDoing = Che cosa stai facendo?
 undo = annulla
 autoShortenUrl = Abbreviazione automatica URL
-updateTo = aggiorna in: 
+updateTo = aggiorna in:
 noAccountsMsg = Nessun account trovato. Clicca su 'Aggiungi/Rimuovi account' per aggiungerne uno 
 moveLeft = Sposta feed a sinistra
 moveRight = Sposta feed a destra
@@ -35,6 +35,7 @@ twitterSearches = Ricerche Twitter
 preferences = Preferenze
 whatAreYouDoing = Che cosa stai facendo?
 moreThan140Chars = Sono consentiti massimo 140 caratteri
+moreThan420Chars = Non sono consentiti pi\u00f9 di 420 caratteri
 pleaseSelectAnAccount = Seleziona un account per l'invio
 noDataFound = Nessun dato trovato
 clickForOlderMsgs = Clicca qui per visualizzare i messaggi meno recenti
@@ -118,10 +119,13 @@ twitterPinInvalid = PIN di Twitter NON VALIDO. Riprova
 addRemoveAccounts = Aggiungi/Rimuovi account
 addTwitterAcc = Aggiungi account Twitter
 addFacebookAcc = Aggiungi account Facebook
+addAccounts = Aggiungi account
+accountActivated = Account attivato
+addSocialcastAcc = Aggiungi account Socialcast
 deleteAcc = Elimina account
 refreshAcc = Aggiorna account
 manageAccounts = Gestisci account
-authorizeZimbraToAccessFacebook = Accedi a Facebook e autorizza Zimbra
+deleteAndReaddFBAccount = Autorizzazione non riuscita. Elimna l'account Facebook e aggiungilo di nuovo.
 accountsUpdated = Aggiornamento account completato
 accountType = Tipo
 accountName = Account
@@ -134,6 +138,13 @@ goToFacebook = Vai a Facebook
 loadPermissions = Carica autorizzazioni
 goToTwitter = Vai a Twitter
 enterTwitterPin = Immetti PIN di Twitter
+
+#socialcast add account dialog
+addSocialcastAccount = Aggiungi account Socialcast
+socialcastEmail = Email Socialcast
+socialcastPassword = Password Socialcast
+socialcastServer = Server Socialcast
+couldNotAuthenticateSocialcastAccnt = Impossibile autenticare account Socialcast
 
 #Facebook Signin steps
 fbSigninSteps = Procedura per aggiungere un account Facebook:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Impossibile aggiungere 'Mi piace' su Facebook
 couldNotGetComments = Impossibile ottenere commenti
 seeAllComments = Vedi tutti i {0} commenti
 
+#socialcast
+couldNotAddCommentToSC =   Impossibile aggiungere un Commento a Socialcast
 #digg
 diggError = Errore Digg: 
 
