--- a/src/zimlet/com_zimbra_social/com_zimbra_social_pt_BR.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_pt_BR.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Enviar mensagem particular/direta:
 whatAreYouDoing = O que voc\u00ea est\u00e1 fazendo?
 undo = desfazer
 autoShortenUrl = Reduzir URL automaticamente
-updateTo = atualizar para: 
+updateTo = Atualizar para:
 noAccountsMsg = Nenhuma conta encontrada. Clique em 'Adicionar/remover contas' para adicionar uma 
 moveLeft = Mover este conte\u00fado para a esquerda
 moveRight = Mover este conte\u00fado para a direita
@@ -35,6 +35,7 @@ twitterSearches = Pesquisas do Twitter
 preferences = Prefer\u00eancias
 whatAreYouDoing = O que voc\u00ea est\u00e1 fazendo?
 moreThan140Chars = N\u00e3o \u00e9 permitido inserir mais de 140 caracteres
+moreThan420Chars = N\u00e3o \u00e9 permitido inserir mais de 420 caracteres
 pleaseSelectAnAccount = Selecione uma conta para envio
 noDataFound = N\u00e3o foram encontrados dados
 clickForOlderMsgs = Clique aqui para ver mensagens antigas
@@ -118,10 +119,13 @@ twitterPinInvalid = O PIN do Twitter \u00e9 INV\u00c1LIDO. Tente novamente.
 addRemoveAccounts = Adicionar/remover contas
 addTwitterAcc = Adicionar conta do Twitter
 addFacebookAcc = Adicionar conta do Facebook
+addAccounts = Adicionar contas
+accountActivated = Conta ativada
+addSocialcastAcc = Adicionar conta do Socialcast
 deleteAcc = Excluir conta
 refreshAcc = Atualizar conta
 manageAccounts = Gerenciar contas
-authorizeZimbraToAccessFacebook = Efetue login no Facebook e autorize o Zimbra
+deleteAndReaddFBAccount = Falha na autoriza\u00e7\u00e3o. Exclua a conta do Facebook e adicione-a novamente
 accountsUpdated = As contas foram atualizadas com \u00eaxito
 accountType = Tipo
 accountName = Conta
@@ -134,6 +138,13 @@ goToFacebook = Ir para o Facebook
 loadPermissions = Carregar permiss\u00f5es
 goToTwitter = Ir para o Twitter
 enterTwitterPin = Inserir PIN do Twitter
+
+#socialcast add account dialog
+addSocialcastAccount = Adicionar conta do Socialcast
+socialcastEmail = E-mail do Socialcast
+socialcastPassword = Senha do Socialcast
+socialcastServer = Servidor do Socialcast
+couldNotAuthenticateSocialcastAccnt = N\u00e3o foi poss\u00edvel autenticar a conta do Socialcast
 
 #Facebook Signin steps
 fbSigninSteps = Etapas para a inclus\u00e3o de uma conta do Facebook:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = N\u00e3o foi poss\u00edvel adicionar 'Curtir' no Facebook.
 couldNotGetComments = N\u00e3o foi poss\u00edvel obter coment\u00e1rios.
 seeAllComments = Ver todos os {0} coment\u00e1rios
 
+#socialcast
+couldNotAddCommentToSC =   N\u00e3o foi poss\u00edvel adicionar um coment\u00e1rio ao Socialcast
 #digg
 diggError = Erro do Digg: 
 
