Bug: 60756 check in other 13 locales into Helix
http://bugzilla.zimbra.com/show_bug.cgi?id=60756

Copied from Perforce
 Change: 320244

--- a/src/zimlet/com_zimbra_social/com_zimbra_social_en_AU.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_en_AU.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Send Direct/private Message:
 whatAreYouDoing = What are you doing?
 undo = undo
 autoShortenUrl = Auto Shorten URL
-updateTo = update to: 
+updateTo = Update to: 
 noAccountsMsg = No accounts found. Click on 'Add/Remove Accounts' to add one 
 moveLeft = Move this feed left
 moveRight = Move this feed right
@@ -35,6 +35,7 @@ twitterSearches = Twitter Searches
 preferences = Preferences
 whatAreYouDoing = What are you doing?
 moreThan140Chars = More than 140 Characters is not allowed
+moreThan420Chars = More than 420 characters is not allowed
 pleaseSelectAnAccount = Please Select an account to send
 noDataFound = No data found
 clickForOlderMsgs = Click here to see older messages
@@ -118,10 +119,13 @@ twitterPinInvalid = Twitter PIN is INVALID, please try again
 addRemoveAccounts = Add/Remove Accounts
 addTwitterAcc = Add Twitter Account
 addFacebookAcc = Add Facebook Account
+addAccounts = Add Accounts
+accountActivated = Account Activated
+addSocialcastAcc = Add Socialcast account
 deleteAcc = Delete Account
 refreshAcc = Refresh Account
 manageAccounts = Manage Accounts
-authorizeZimbraToAccessFacebook = Please login to Facebook and Authorise Zimbra
+deleteAndReaddFBAccount = Authorisation failed. Please delete Facebook account and re-add
 accountsUpdated = Accounts have been updated successfully
 accountType = Type
 accountName = Account
@@ -134,6 +138,13 @@ goToFacebook = Go to Facebook
 loadPermissions = Load Permissions
 goToTwitter = Go to Twitter
 enterTwitterPin = Enter Twitter PIN
+
+#socialcast add account dialog
+addSocialcastAccount = Add Socialcast account
+socialcastEmail = Socialcast Email
+socialcastPassword = Socialcast Password
+socialcastServer = Socialcast Server
+couldNotAuthenticateSocialcastAccnt = Could not authenticate Socialcast account
 
 #Facebook Signin steps
 fbSigninSteps = Steps to adding Facebook account:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Could not Add 'Like' to Facebook
 couldNotGetComments = Could not get Comments
 seeAllComments = See all {0} comments
 
+#socialcast
+couldNotAddCommentToSC =   Could not add Comment to Socialcast
 #digg
 diggError = Digg Error: 
 
