--- a/src/zimlet/com_zimbra_social/com_zimbra_social_es.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_es.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Enviar mensaje directo/privado:
 whatAreYouDoing = \u00bfQu\u00e9 est\u00e1s haciendo?
 undo = deshacer
 autoShortenUrl = Acortar URL autom\u00e1ticamente
-updateTo = actualizar a: 
+updateTo = Actualizar a: 
 noAccountsMsg = No se ha encontrado ninguna cuenta. Haz clic en "A\u00f1adir/eliminar cuentas" para a\u00f1adir una 
 moveLeft = Mover esta fuente hacia la izquierda
 moveRight = Mover esta fuente hacia la derecha
@@ -35,6 +35,7 @@ twitterSearches = B\u00fasquedas en Twitter
 preferences = Preferencias
 whatAreYouDoing = \u00bfQu\u00e9 est\u00e1s haciendo?
 moreThan140Chars = No se admite la introducci\u00f3n de m\u00e1s de 140 caracteres
+moreThan420Chars = No se admite la introducci\u00f3n de m\u00e1s de 420 caracteres
 pleaseSelectAnAccount = Selecciona una cuenta a la que realizar el env\u00edo
 noDataFound = No se han encontrado datos
 clickForOlderMsgs = Haz clic aqu\u00ed para ver mensajes anteriores
@@ -118,10 +119,13 @@ twitterPinInvalid = El PIN de Twitter no es V\u00c1LIDO, int\u00e9ntalo de nuevo
 addRemoveAccounts = A\u00f1adir/eliminar cuentas
 addTwitterAcc = A\u00f1adir cuenta de Twitter
 addFacebookAcc = A\u00f1adir cuenta de Facebook
+addAccounts = A\u00f1adir cuentas
+accountActivated = Cuenta activada
+addSocialcastAcc = A\u00f1adir cuenta de Socialcast
 deleteAcc = Eliminar cuenta
 refreshAcc = Actualizar cuenta
 manageAccounts = Administrar cuentas
-authorizeZimbraToAccessFacebook = Inicia sesi\u00f3n en Facebook y autoriza a Zimbra
+deleteAndReaddFBAccount = Fallo en la autorizaci\u00f3n. Elimina la cuenta de Facebook y vuelve a a\u00f1adirla
 accountsUpdated = Se han actualizado las cuentas correctamente
 accountType = Tipo
 accountName = Cuenta
@@ -134,6 +138,13 @@ goToFacebook = Ir a Facebook
 loadPermissions = Cargar permisos
 goToTwitter = Ir a Twitter
 enterTwitterPin = Introduce el PIN de Twitter
+
+#socialcast add account dialog
+addSocialcastAccount = A\u00f1adir cuenta de Socialcast
+socialcastEmail = Correo electr\u00f3nico de Socialcast
+socialcastPassword = Contrase\u00f1a de Socialcast
+socialcastServer = Servidor de Socialcast
+couldNotAuthenticateSocialcastAccnt = No se ha podido autenticar la cuenta de Socialcast
 
 #Facebook Signin steps
 fbSigninSteps = Pasos para a\u00f1adir una cuenta de Facebook:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = No se ha podido a\u00f1adir "Me gusta" en Facebook
 couldNotGetComments = No se pudieron obtener comentarios
 seeAllComments = Ver los {0} comentarios
 
+#socialcast
+couldNotAddCommentToSC =   No se ha podido a\u00f1adir el comentario en Socialcast
 #digg
 diggError = Error en Digg: 
 
