--- a/src/zimlet/com_zimbra_social/com_zimbra_social_fr.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_fr.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Envoyer un message direct/priv\u00e9\u00a0:
 whatAreYouDoing = Que faites-vous\u00a0?
 undo = annuler
 autoShortenUrl = Raccourcir automatiquement l'URL
-updateTo = mettre \u00e0 jour vers\u00a0: 
+updateTo = Mettre \u00e0 jour vers\u00a0: 
 noAccountsMsg = Aucun compte n'a \u00e9t\u00e9 trouv\u00e9. Cliquez sur "Ajouter/supprimer des comptes" pour en ajouter un 
 moveLeft = D\u00e9placer ce fil vers la gauche
 moveRight = D\u00e9placer ce fil vers la droite
@@ -35,6 +35,7 @@ twitterSearches = Recherches Twitter
 preferences = Pr\u00e9f\u00e9rences
 whatAreYouDoing = Que faites-vous\u00a0?
 moreThan140Chars = Limit\u00e9 \u00e0 140 caract\u00e8res
+moreThan420Chars = Limit\u00e9 \u00e0 420 caract\u00e8res
 pleaseSelectAnAccount = Veuillez s\u00e9lectionner un compte \u00e0 envoyer
 noDataFound = Aucune donn\u00e9e n'a \u00e9t\u00e9 trouv\u00e9e
 clickForOlderMsgs = Cliquez ici pour consulter les messages anciens
@@ -118,10 +119,13 @@ twitterPinInvalid = Le code PIN Twitter est INCORRECT, veuillez r\u00e9essayer
 addRemoveAccounts = Ajouter/supprimer des comptes
 addTwitterAcc = Ajouter un compte Twitter
 addFacebookAcc = Ajouter un compte Facebook
+addAccounts = Ajouter des comptes
+accountActivated = Compte activ\u00e9
+addSocialcastAcc = Ajouter un compte Socialcast
 deleteAcc = Supprimer le compte
 refreshAcc = Actualiser le compte
 manageAccounts = Gestion des comptes
-authorizeZimbraToAccessFacebook = Veuillez vous connecter \u00e0 Facebook et autoriser Zimbra
+deleteAndReaddFBAccount = \u00c9chec de l'autorisation. Veuillez supprimer le compte Facebook et ajouter \u00e0 nouveau
 accountsUpdated = Mise \u00e0 jour des comptes r\u00e9ussie
 accountType = Type
 accountName = Compte
@@ -134,6 +138,13 @@ goToFacebook = Aller sur Facebook
 loadPermissions = Charger les autorisations
 goToTwitter = Aller sur Twitter
 enterTwitterPin = Saisissez le code PIN Twitter
+
+#socialcast add account dialog
+addSocialcastAccount = Ajouter un compte Socialcast
+socialcastEmail = E-mail Socialcast
+socialcastPassword = Mot de passe Socialcast
+socialcastServer = Serveur Socialcast
+couldNotAuthenticateSocialcastAccnt = \u00c9chec de l'authentification du compte Socialcast
 
 #Facebook Signin steps
 fbSigninSteps = Pour ajouter un compte Facebook\u00a0:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Impossible d'ajouter "J'aime" sur Facebook
 couldNotGetComments = Impossible d'obtenir des commentaires
 seeAllComments = Voir les {0} commentaires
 
+#socialcast
+couldNotAddCommentToSC =   Impossible d'ajouter un commentaire sur Socialcast
 #digg
 diggError = Erreur Digg\u00a0: 
 
