--- a/src/zimlet/com_zimbra_social/com_zimbra_social_hu.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_hu.properties
@@ -23,7 +23,7 @@ sendDirectMsg = K\u00f6zvetlen/mag\u00e1njelleg\u0171 \u00fczenet k\u00fcld\u00e
 whatAreYouDoing = Mit csin\u00e1l most?
 undo = visszavon\u00e1s
 autoShortenUrl = URL automatikus r\u00f6vid\u00edt\u00e9se
-updateTo = friss\u00edt\u00e9s erre: 
+updateTo = Friss\u00edt\u00e9s a k\u00f6vetkez\u0151re: 
 noAccountsMsg = Nem tal\u00e1lhat\u00f3 fi\u00f3k. Kattintson a \u201eFi\u00f3kok hozz\u00e1ad\u00e1sa/t\u00f6rl\u00e9se\u201d lehet\u0151s\u00e9gre a hozz\u00e1ad\u00e1shoz 
 moveLeft = H\u00edrcsatornaelem mozgat\u00e1sa balra
 moveRight = H\u00edrcsatornaelem mozgat\u00e1sa jobbra
@@ -35,6 +35,7 @@ twitterSearches = Twitter-keres\u00e9sek
 preferences = Be\u00e1ll\u00edt\u00e1sok
 whatAreYouDoing = Mit csin\u00e1l most?
 moreThan140Chars = Legfeljebb 140 karakter enged\u00e9lyezett
+moreThan420Chars = Legfeljebb 420 karakter enged\u00e9lyezett
 pleaseSelectAnAccount = V\u00e1lassza ki az elk\u00fcldeni k\u00edv\u00e1nt fi\u00f3kot
 noDataFound = Nincs adat
 clickForOlderMsgs = Kattintson ide r\u00e9gebbi \u00fczenetek megtekint\u00e9s\u00e9hez
@@ -118,10 +119,13 @@ twitterPinInvalid = A Twitter PIN-k\u00f3d \u00c9RV\u00c9NYTELEN, pr\u00f3b\u00e
 addRemoveAccounts = Fi\u00f3kok hozz\u00e1ad\u00e1sa/elt\u00e1vol\u00edt\u00e1sa
 addTwitterAcc = Twitter-fi\u00f3k hozz\u00e1ad\u00e1sa
 addFacebookAcc = Facebook-fi\u00f3k hozz\u00e1ad\u00e1sa
+addAccounts = Fi\u00f3kok hozz\u00e1ad\u00e1sa
+accountActivated = Fi\u00f3k aktiv\u00e1lva
+addSocialcastAcc = Socialcast-fi\u00f3k hozz\u00e1ad\u00e1sa
 deleteAcc = Fi\u00f3k t\u00f6rl\u00e9se
 refreshAcc = Fi\u00f3k friss\u00edt\u00e9se
 manageAccounts = Fi\u00f3kok kezel\u00e9se
-authorizeZimbraToAccessFacebook = Jelentkezzen be a Facebookra \u00e9s hiteles\u00edtse a Zimbr\u00e1t
+deleteAndReaddFBAccount = A hiteles\u00edt\u00e9s sikertelen. T\u00f6r\u00f6lje a Facebook-profilt, majd adja hozz\u00e1 \u00fajra
 accountsUpdated = A fi\u00f3kok friss\u00edt\u00e9se sikeres
 accountType = T\u00edpus
 accountName = Fi\u00f3k
@@ -134,6 +138,13 @@ goToFacebook = Ugr\u00e1s a Facebookra
 loadPermissions = Jogosults\u00e1gok bet\u00f6lt\u00e9se
 goToTwitter = Ugr\u00e1s a Twitterre
 enterTwitterPin = Twitter PIN-k\u00f3d be\u00edr\u00e1sa
+
+#socialcast add account dialog
+addSocialcastAccount = Socialcast-fi\u00f3k hozz\u00e1ad\u00e1sa
+socialcastEmail = Socialcast e-mail c\u00edm
+socialcastPassword = Socialcast jelsz\u00f3
+socialcastServer = Socialcast kiszolg\u00e1l\u00f3
+couldNotAuthenticateSocialcastAccnt = Nem siker\u00fclt hiteles\u00edteni a Socialcast-fi\u00f3kot
 
 #Facebook Signin steps
 fbSigninSteps = Facebook-fi\u00f3k hozz\u00e1ad\u00e1s\u00e1nak l\u00e9p\u00e9sei:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Nem siker\u00fclt a \u201eTetszik\u201d hozz\u00e1ad\u00e1
 couldNotGetComments = Nem siker\u00fclt a hozz\u00e1sz\u00f3l\u00e1sok lek\u00e9r\u00e9se
 seeAllComments = \u00d6sszes {0} megjegyz\u00e9s megjelen\u00edt\u00e9se
 
+#socialcast
+couldNotAddCommentToSC =   Nem siker\u00fclt megjegyz\u00e9st hozz\u00e1adni a Socialcast-fi\u00f3khoz
 #digg
 diggError = Digg-hiba: 
 
