--- a/src/zimlet/com_zimbra_social/com_zimbra_social_ro.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_ro.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Trimitere mesaj direct/privat:
 whatAreYouDoing = Ce face\u0163i?
 undo = anulare
 autoShortenUrl = Scurtare automat\u0103 URL
-updateTo = actualizare: 
+updateTo = Actualizare la: 
 noAccountsMsg = Nu s-a g\u0103sit niciun cont. Clic pe 'Ad\u0103ugare/Eliminare conturi' pentru a ad\u0103uga un cont 
 moveLeft = Mutare flux de date la st\u00e2nga
 moveRight = Mutare flux de date la dreapta
@@ -35,6 +35,7 @@ twitterSearches = C\u0103utare pe Twitter
 preferences = Preferin\u0163e
 whatAreYouDoing = Ce face\u0163i?
 moreThan140Chars = Maxim 140 de caractere
+moreThan420Chars = Maxim 420 de caractere
 pleaseSelectAnAccount = Selecta\u0163i un cont pentru a trimite
 noDataFound = Nu s-au g\u0103sit date
 clickForOlderMsgs = Clic aici pentru a vedea mesajele mai vechi
@@ -118,10 +119,13 @@ twitterPinInvalid = PIN de la Twitter NU este VALABIL, \u00eencerca\u0163i din n
 addRemoveAccounts = Ad\u0103ugare/Eliminare conturi
 addTwitterAcc = Ad\u0103ugare cont Twitter
 addFacebookAcc = Ad\u0103ugare cont Facebook
+addAccounts = Ad\u0103ugare conturi
+accountActivated = Cont activat
+addSocialcastAcc = Ad\u0103ugare cont Socialcast
 deleteAcc = \u015etergere cont
 refreshAcc = Actualizare cont
 manageAccounts = Gestionare conturi
-authorizeZimbraToAccessFacebook = Autentifica\u0163i-v\u0103 \u00een contul Facebook \u015fi autoriza\u0163i Zimbra.
+deleteAndReaddFBAccount = Autorizarea a e\u015fuat. \u015eterge\u0163i contul Facebook \u015fi read\u0103uga\u0163i-l
 accountsUpdated = Conturile au fost actualizate
 accountType = Tip
 accountName = Cont
@@ -134,6 +138,13 @@ goToFacebook = Salt la Facebook
 loadPermissions = \u00cenc\u0103rcare permisiuni
 goToTwitter = Salt la Twitter
 enterTwitterPin = Introducere PIN de la Twitter
+
+#socialcast add account dialog
+addSocialcastAccount = Ad\u0103ugare cont Socialcast
+socialcastEmail = E-mail Socialcast
+socialcastPassword = Parol\u0103 Socialcast
+socialcastServer = Server Socialcast
+couldNotAuthenticateSocialcastAccnt = Nu s-a putut autentifica contul Socialcast
 
 #Facebook Signin steps
 fbSigninSteps = Etapele ad\u0103ug\u0103rii contului facebook:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Nu s-a putut ad\u0103uga 'simpatizarea' pe facebook
 couldNotGetComments = Nu s-au ob\u0163inut comentarii
 seeAllComments = Vede\u0163i toate {0} comentariile
 
+#socialcast
+couldNotAddCommentToSC =   Nu s-a putut ad\u0103uga comentariul pe Socialcast
 #digg
 diggError = Eroare Digg: 
 
