--- a/src/zimlet/com_zimbra_social/com_zimbra_social_de.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_de.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Direktnachricht/private Nachricht senden:
 whatAreYouDoing = Was tun Sie?
 undo = r\u00fcckg\u00e4ngig
 autoShortenUrl = URL automatisch k\u00fcrzen
-updateTo = aktualisieren zu: 
+updateTo = Aktualisieren auf: 
 noAccountsMsg = Keine Accounts gefunden. Klicken Sie auf 'Accounts hinzuf\u00fcgen/entfernen', um einen Account hinzuzuf\u00fcgen. 
 moveLeft = Diesen Feed nach links verschieben
 moveRight = Diesen Feed nach rechts verschieben
@@ -35,6 +35,7 @@ twitterSearches = Twitter-Suchen
 preferences = Einstellungen
 whatAreYouDoing = Was tun Sie?
 moreThan140Chars = Es sind nur maximal 140 Zeichen erlaubt.
+moreThan420Chars = Es sind nur maximal 420 Zeichen erlaubt.
 pleaseSelectAnAccount = W\u00e4hlen Sie einen Account zum Senden aus
 noDataFound = Keine Daten gefunden
 clickForOlderMsgs = Klicken Sie hier, um \u00e4ltere Nachrichten zu sehen
@@ -118,10 +119,13 @@ twitterPinInvalid = Die Twitter-PIN ist UNG\u00dcLTIG. Bitte versuchen Sie es er
 addRemoveAccounts = Accounts hinzuf\u00fcgen/entfernen
 addTwitterAcc = Twitter-Account hinzuf\u00fcgen
 addFacebookAcc = Facebook-Account hinzuf\u00fcgen
+addAccounts = Accounts hinzuf\u00fcgen
+accountActivated = Account ist aktiviert
+addSocialcastAcc = Socialcast-Account hinzuf\u00fcgen
 deleteAcc = Account l\u00f6schen
 refreshAcc = Account aktualisieren
 manageAccounts = Accounts verwalten
-authorizeZimbraToAccessFacebook = Bitte bei Facebook anmelden und Zimbra autorisieren
+deleteAndReaddFBAccount = Autorisierung fehlgeschlagen. L\u00f6schen Sie den Facebook-Account und f\u00fcgen Sie ihn erneut hinzu.
 accountsUpdated = Die Accounts wurden erfolgreich aktualisiert.
 accountType = Typ
 accountName = Account
@@ -134,6 +138,13 @@ goToFacebook = Zu Facebook gehen
 loadPermissions = Ladeberechtigung
 goToTwitter = Zu Twitter gehen
 enterTwitterPin = Twitter-PIN eingeben
+
+#socialcast add account dialog
+addSocialcastAccount = Socialcast-Account hinzuf\u00fcgen
+socialcastEmail = Socialcast-Mail-Adresse
+socialcastPassword = Socialcast-Passwort
+socialcastServer = Socialcast-Server
+couldNotAuthenticateSocialcastAccnt = Socialcast-Account konnte nicht authentifiziert werden
 
 #Facebook Signin steps
 fbSigninSteps = So f\u00fcgen Sie einen Facebook-Account hinzu:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Fehler beim Hinzuf\u00fcgen von 'Like' zu Facebook
 couldNotGetComments = Fehler beim Abrufen der Kommentare
 seeAllComments = Alle {0} Kommentare anzeigen
 
+#socialcast
+couldNotAddCommentToSC =   Kommentar konnte nicht zu Socialcast hinzugef\u00fcgt werden
 #digg
 diggError = Digg-Fehler: 
 
