--- a/src/zimlet/com_zimbra_social/com_zimbra_social_ja.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_ja.properties
@@ -35,6 +35,7 @@ twitterSearches = Twitter\u691c\u7d22
 preferences = \u30d7\u30ea\u30d5\u30a1\u30ec\u30f3\u30b9
 whatAreYouDoing = \u4f55\u3092\u3057\u307e\u3059\u304b\uff1f
 moreThan140Chars = 140\u6587\u5b57\u3092\u8d85\u3048\u308b\u3053\u3068\u306f\u8a31\u53ef\u3055\u308c\u3066\u3044\u307e\u305b\u3093
+moreThan420Chars = 420\u6587\u5b57\u3092\u8d85\u3048\u308b\u3053\u3068\u306f\u8a31\u53ef\u3055\u308c\u3066\u3044\u307e\u305b\u3093
 pleaseSelectAnAccount = \u9001\u4fe1\u3059\u308b\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
 noDataFound = \u30c7\u30fc\u30bf\u306f\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f
 clickForOlderMsgs = \u53e4\u3044\u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u8868\u793a\u3059\u308b\u306b\u306f\u3001\u3053\u3053\u3092\u30af\u30ea\u30c3\u30af
@@ -118,10 +119,13 @@ twitterPinInvalid = Twitter PIN\u304c\u7121\u52b9\u3067\u3059\u3002\u3082\u3046\
 addRemoveAccounts = \u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u8ffd\u52a0/\u524a\u9664
 addTwitterAcc = Twitter\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u8ffd\u52a0
 addFacebookAcc = Facebook\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u8ffd\u52a0
+addAccounts = \u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u8ffd\u52a0
+accountActivated = \u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u30a2\u30af\u30c6\u30a3\u30d6\u306b\u3057\u307e\u3057\u305f
+addSocialcastAcc = Socialcast\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u8ffd\u52a0
 deleteAcc = \u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u524a\u9664
 refreshAcc = \u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u66f4\u65b0
 manageAccounts = \u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u7ba1\u7406
-authorizeZimbraToAccessFacebook = Facebook\u306b\u30ed\u30b0\u30a4\u30f3\u3057\u3001Zimbra\u3092\u8a8d\u8a3c\u3057\u3066\u304f\u3060\u3055\u3044
+deleteAndReaddFBAccount = \u8a8d\u8a3c\u304c\u5931\u6557\u3057\u307e\u3057\u305f\u3002Facebook\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u524a\u9664\u3057\u3001\u518d\u5ea6\u8ffd\u52a0\u3057\u3066\u304f\u3060\u3055\u3044
 accountsUpdated = \u30a2\u30ab\u30a6\u30f3\u30c8\u306f\u6b63\u5e38\u306b\u66f4\u65b0\u3055\u308c\u307e\u3057\u305f
 accountType = \u7a2e\u985e
 accountName = \u30a2\u30ab\u30a6\u30f3\u30c8
@@ -134,6 +138,13 @@ goToFacebook = Facebook\u306b\u79fb\u52d5
 loadPermissions = \u30a2\u30af\u30bb\u30b9\u8a31\u53ef\u3092\u30ed\u30fc\u30c9
 goToTwitter = Twitter\u306b\u79fb\u52d5
 enterTwitterPin = Twitter PIN\u3092\u5165\u529b
+
+#socialcast add account dialog
+addSocialcastAccount = Socialcast\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u8ffd\u52a0
+socialcastEmail = Socialcast\u306e\u30e1\u30fc\u30eb
+socialcastPassword = Socialcast\u306e\u30d1\u30b9\u30ef\u30fc\u30c9
+socialcastServer = Socialcast\u30b5\u30fc\u30d0\u30fc
+couldNotAuthenticateSocialcastAccnt = Socialcast\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u8a8d\u8a3c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 
 #Facebook Signin steps
 fbSigninSteps = Facebook\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u8ffd\u52a0\u624b\u9806\uff1a
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = [\u597d\u307f]\u3092Facebook\u306b\u8ffd\u52a0\u3067\u304d
 couldNotGetComments = \u30b3\u30e1\u30f3\u30c8\u3092\u53d6\u5f97\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 seeAllComments = {0}\u306e\u30b3\u30e1\u30f3\u30c8\u3092\u3059\u3079\u3066\u8868\u793a
 
+#socialcast
+couldNotAddCommentToSC =   Socialcast\u306b\u30b3\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 #digg
 diggError = Digg\u306e\u30a8\u30e9\u30fc\uff1a 
 
