--- a/src/zimlet/com_zimbra_social/com_zimbra_social_ko.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_ko.properties
@@ -35,6 +35,7 @@ twitterSearches = Twitter \uac80\uc0c9
 preferences = \uae30\ubcf8 \uc124\uc815
 whatAreYouDoing = \uc9c0\uae08 \ubb50\ud558\uace0 \uacc4\uc138\uc694?
 moreThan140Chars = 140\uc790 \uc774\uc0c1 \uc785\ub825\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
+moreThan420Chars = 420\uc790 \uc774\uc0c1\uc740 \uc785\ub825\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 pleaseSelectAnAccount = \uacc4\uc815\uc744 \uc120\ud0dd\ud558\uc5ec \ubcf4\ub0b4\uc138\uc694.
 noDataFound = \ub370\uc774\ud130\ub97c \ucc3e\uc744 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 clickForOlderMsgs = \uc5ec\uae30\ub97c \ud074\ub9ad\ud558\uc5ec \uc624\ub798\ub41c \uba54\uc2dc\uc9c0\ub97c \ubcf4\uc138\uc694.
@@ -118,10 +119,13 @@ twitterPinInvalid = Twitter PIN\uc774 \uc62c\ubc14\ub974\uc9c0 \uc54a\uc2b5\ub2c
 addRemoveAccounts = \uacc4\uc815 \ucd94\uac00/\uc81c\uac70
 addTwitterAcc = Twitter \uacc4\uc815 \ucd94\uac00
 addFacebookAcc = Facebook \uacc4\uc815 \ucd94\uac00
+addAccounts = \uacc4\uc815 \ucd94\uac00
+accountActivated = \uacc4\uc815\uc774 \ud65c\uc131\ud654\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+addSocialcastAcc = Socialcast \uacc4\uc815 \ucd94\uac00
 deleteAcc = \uacc4\uc815 \uc0ad\uc81c
 refreshAcc = \uacc4\uc815 \uc0c8\ub85c \uace0\uce68
 manageAccounts = \uacc4\uc815 \uad00\ub9ac
-authorizeZimbraToAccessFacebook = Facebook\uc5d0 \ub85c\uadf8\uc778\ud558\uc5ec Zimbra\ub97c \uc2b9\uc778\ud558\uc138\uc694.
+deleteAndReaddFBAccount = \uc778\uc99d\uc774 \uc2e4\ud328\ud588\uc2b5\ub2c8\ub2e4. Facebook \uacc4\uc815\uc744 \uc0ad\uc81c\ud55c \ud6c4 \ub2e4\uc2dc \ucd94\uac00\ud558\uc2ed\uc2dc\uc624.
 accountsUpdated = \uacc4\uc815\uc774 \uc131\uacf5\uc801\uc73c\ub85c \uc5c5\ub370\uc774\ud2b8\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
 accountType = \uc720\ud615
 accountName = \uacc4\uc815
@@ -134,6 +138,13 @@ goToFacebook = Facebook\uc73c\ub85c \uc774\ub3d9
 loadPermissions = \uad8c\ud55c \ubd88\ub7ec\uc624\uae30
 goToTwitter = Twitter\ub85c \uc774\ub3d9
 enterTwitterPin = Twitter PIN \uc785\ub825
+
+#socialcast add account dialog
+addSocialcastAccount = Socialcast \uacc4\uc815 \ucd94\uac00
+socialcastEmail = Socialcast \uc774\uba54\uc77c
+socialcastPassword = Socialcast \ube44\ubc00\ubc88\ud638
+socialcastServer = Socialcast \uc11c\ubc84
+couldNotAuthenticateSocialcastAccnt = Socialcast \uacc4\uc815\uc744 \uc778\uc99d\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 
 #Facebook Signin steps
 fbSigninSteps = Facebook \uacc4\uc815\uc744 \ucd94\uac00\ud558\ub294 \uc808\ucc28:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Facebook\uc5d0 '\uc88b\uc544\uc694'\ub97c \ucd94\uac00\ud5
 couldNotGetComments = \uc758\uacac\uc744 \uac00\uc838\uc62c \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 seeAllComments = \ubaa8\ub4e0 {0}\uac1c \uc758\uacac \ud45c\uc2dc
 
+#socialcast
+couldNotAddCommentToSC =   Socialcast\uc5d0 \uc758\uacac\uc744 \ucd94\uac00\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 #digg
 diggError = Digg \uc624\ub958: 
 
