--- a/src/zimlet/com_zimbra_social/com_zimbra_social_pl.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_pl.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Wy\u015blij bezpo\u015bredni\u0105/prywatn\u0105 wiadomo\u015b\u
 whatAreYouDoing = Co porabiasz?
 undo = cofnij
 autoShortenUrl = Automatycznie skr\u00f3\u0107 adres URL
-updateTo = zaktualizuj do: 
+updateTo = Aktualizuj do: 
 noAccountsMsg = Nie znaleziono kont. Kliknij opcj\u0119 \u201eDodaj/Usu\u0144 konta\u201d, aby doda\u0107 konto. 
 moveLeft = Przesu\u0144 kana\u0142 w lewo
 moveRight = Przesu\u0144 kana\u0142 w prawo
@@ -35,6 +35,7 @@ twitterSearches = Wyszukiwania w serwisie Twitter
 preferences = Opcje
 whatAreYouDoing = Co porabiasz?
 moreThan140Chars = Mo\u017cna u\u017cy\u0107 maksymalnie 140 znak\u00f3w
+moreThan420Chars = Mo\u017cna u\u017cy\u0107 maksymalnie 420 znak\u00f3w
 pleaseSelectAnAccount = Wybierz konto, aby wys\u0142a\u0107
 noDataFound = Nie znaleziono danych
 clickForOlderMsgs = Kliknij tutaj, aby wy\u015bwietli\u0107 starsze wiadomo\u015bci
@@ -118,10 +119,13 @@ twitterPinInvalid = Kod PIN serwisu TWITTER jest NIEPRAWID\u0141OWY. Spr\u00f3bu
 addRemoveAccounts = Dodaj/usu\u0144 konta
 addTwitterAcc = Dodaj konto w serwisie Twitter
 addFacebookAcc = Dodaj konto w serwisie Facebook
+addAccounts = Dodaj konta
+accountActivated = Konto aktywowane
+addSocialcastAcc = Dodaj konto Socialcast
 deleteAcc = Usu\u0144 konto
 refreshAcc = Od\u015bwie\u017c konto
 manageAccounts = Zarz\u0105dzaj kontami
-authorizeZimbraToAccessFacebook = Zaloguj si\u0119 w serwisie Facebook i udziel autoryzacji dla oprogramowania Zimbra
+deleteAndReaddFBAccount = Autoryzacja nie powiod\u0142a si\u0119. Usu\u0144 konto serwisu Facebook i dodaj ponownie
 accountsUpdated = Konta zosta\u0142y pomy\u015blnie zaktualizowane
 accountType = Typ
 accountName = Konto
@@ -134,6 +138,13 @@ goToFacebook = Przejd\u017a do serwisu Facebook
 loadPermissions = Wczytaj pozwolenia
 goToTwitter = Przejd\u017a do serwisu Twitter
 enterTwitterPin = Wprowad\u017a kod PIN serwisu Twitter
+
+#socialcast add account dialog
+addSocialcastAccount = Dodaj konto Socialcast
+socialcastEmail = E-mail Socialcast
+socialcastPassword = Has\u0142o Socialcast
+socialcastServer = Serwer Socialcast
+couldNotAuthenticateSocialcastAccnt = Nie mo\u017cna uwierzytelni\u0107 konta Socialcast
 
 #Facebook Signin steps
 fbSigninSteps = Instrukcje dodawania konta w serwisie Facebook:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Nie mo\u017cna oznaczy\u0107 elementu w serwisie Facebook 
 couldNotGetComments = Nie mo\u017cna pobra\u0107 komentarzy
 seeAllComments = Poka\u017c wszystkie komentarze ({0})
 
+#socialcast
+couldNotAddCommentToSC =   Nie mo\u017cna doda\u0107 komentarza do serwisu Socialcast
 #digg
 diggError = B\u0142\u0105d serwisu Digg: 
 
