--- a/src/zimlet/com_zimbra_social/com_zimbra_social_tr.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_tr.properties
@@ -23,7 +23,7 @@ sendDirectMsg = Do\u011frudan/\u00f6zel Mesaj g\u00f6nder:
 whatAreYouDoing = Ne yap\u0131yorsunuz?
 undo = geri al
 autoShortenUrl = URL'yi Otomatik Olarak K\u0131salt
-updateTo = g\u00fcncelle: 
+updateTo = G\u00fcncelle: 
 noAccountsMsg = Hi\u00e7 hesap bulunamad\u0131. Hesap eklemek i\u00e7in 'Hesap Ekle/Kald\u0131r'\u0131 t\u0131klay\u0131n 
 moveLeft = Bu kayna\u011f\u0131 sola ta\u015f\u0131
 moveRight = Bu kayna\u011f\u0131 sa\u011fa ta\u015f\u0131
@@ -35,6 +35,7 @@ twitterSearches = Twitter Aramalar\u0131
 preferences = Tercihler
 whatAreYouDoing = Ne yap\u0131yorsunuz?
 moreThan140Chars = 140 karakterden fazlas\u0131na izin verilmez
+moreThan420Chars = 420 karakterden fazlas\u0131na izin verilmez
 pleaseSelectAnAccount = G\u00f6ndermek istedi\u011finiz hesab\u0131 se\u00e7in
 noDataFound = Veri bulunamad\u0131
 clickForOlderMsgs = Eski mesajlar\u0131 g\u00f6rmek i\u00e7in buray\u0131 t\u0131klay\u0131n
@@ -118,10 +119,13 @@ twitterPinInvalid = Twitter PIN'i GE\u00c7ERS\u0130Z, l\u00fctfen tekrar deneyin
 addRemoveAccounts = Hesap Ekle/Kald\u0131r
 addTwitterAcc = Twitter Hesab\u0131 Ekle
 addFacebookAcc = Facebook Hesab\u0131 Ekle
+addAccounts = Hesaplar Ekle
+accountActivated = Hesap Etkinle\u015ftirildi
+addSocialcastAcc = Socialcast Hesab\u0131 Ekle
 deleteAcc = Hesab\u0131 Sil
 refreshAcc = Hesab\u0131 Yenile
 manageAccounts = Hesaplar\u0131 Y\u00f6net
-authorizeZimbraToAccessFacebook = Facebook'ta oturum a\u00e7\u0131n ve Zimbra'ya izin verin
+deleteAndReaddFBAccount = Yetkilendirme ba\u015far\u0131s\u0131z. L\u00fctfen Facebook hesab\u0131n\u0131 silin ve yeniden ekleyin
 accountsUpdated = Hesaplar ba\u015far\u0131yla g\u00fcncellendi
 accountType = Tip
 accountName = Hesap
@@ -134,6 +138,13 @@ goToFacebook = Facebook'a Git
 loadPermissions = \u0130zinleri Y\u00fckle
 goToTwitter = Twitter'a Git
 enterTwitterPin = Twitter PIN'ini Girin
+
+#socialcast add account dialog
+addSocialcastAccount = Socialcast Hesab\u0131 Ekle
+socialcastEmail = Socialcast E-posta
+socialcastPassword = Socialcast Parolas\u0131
+socialcastServer = Socialcast Sunucusu
+couldNotAuthenticateSocialcastAccnt = Socialcast hesab\u0131n\u0131n kimli\u011fi do\u011frulanamad\u0131
 
 #Facebook Signin steps
 fbSigninSteps = Facebook hesab\u0131n\u0131 ekleme ad\u0131mlar\u0131:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = Facebook'a 'Be\u011fendi' durumu eklenemedi
 couldNotGetComments = Yorumlar al\u0131namad\u0131
 seeAllComments = T\u00fcm {0} yorumu g\u00f6r\u00fcnt\u00fcle
 
+#socialcast
+couldNotAddCommentToSC =   Socialcast'e Yorum eklenemedi
 #digg
 diggError = Digg Hatas\u0131: 
 
