--- a/src/zimlet/com_zimbra_social/com_zimbra_social_zh_CN.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_zh_CN.properties
@@ -35,6 +35,7 @@ twitterSearches = Twitter \u641c\u7d22
 preferences = \u9996\u9009\u9879
 whatAreYouDoing = \u60a8\u5728\u505a\u4ec0\u4e48?
 moreThan140Chars = \u4e0d\u5141\u8bb8\u8d85\u8fc7 140 \u4e2a\u5b57\u7b26
+moreThan420Chars = \u4e0d\u5141\u8bb8\u8d85\u8fc7 420 \u4e2a\u5b57\u7b26
 pleaseSelectAnAccount = \u8bf7\u9009\u62e9\u8981\u53d1\u9001\u5230\u7684\u5e10\u6237
 noDataFound = \u672a\u53d1\u73b0\u6570\u636e
 clickForOlderMsgs = \u5355\u51fb\u6b64\u5904\u67e5\u770b\u65e7\u90ae\u4ef6
@@ -118,10 +119,13 @@ twitterPinInvalid = Twitter PIN \u65e0\u6548\uff0c\u8bf7\u91cd\u8bd5
 addRemoveAccounts = \u6dfb\u52a0/\u79fb\u9664\u5e10\u6237
 addTwitterAcc = \u6dfb\u52a0 Twitter \u5e10\u6237
 addFacebookAcc = \u6dfb\u52a0 Facebook \u5e10\u6237
+addAccounts = \u6dfb\u52a0\u5e10\u6237
+accountActivated = \u5e10\u6237\u5df2\u6fc0\u6d3b
+addSocialcastAcc = \u6dfb\u52a0 Socialcast \u5e10\u6237
 deleteAcc = \u5220\u9664\u5e10\u6237
 refreshAcc = \u5237\u65b0\u5e10\u6237
 manageAccounts = \u5e10\u6237\u7ba1\u7406
-authorizeZimbraToAccessFacebook = \u8bf7\u767b\u5f55\u5230 Facebook \u5e76\u6388\u6743 Zimbra
+deleteAndReaddFBAccount = \u6388\u6743\u5931\u8d25\u3002\u8bf7\u5148\u5220\u9664 Facebook \u5e10\u6237\uff0c\u518d\u91cd\u65b0\u6dfb\u52a0
 accountsUpdated = \u5e10\u6237\u5df2\u6210\u529f\u66f4\u65b0
 accountType = \u7c7b\u578b
 accountName = \u5e10\u6237
@@ -134,6 +138,13 @@ goToFacebook = \u8f6c\u5230 Facebook
 loadPermissions = \u8f7d\u5165\u6743\u9650
 goToTwitter = \u8f6c\u5230 Twitter
 enterTwitterPin = \u8f93\u5165 Twitter PIN
+
+#socialcast add account dialog
+addSocialcastAccount = \u6dfb\u52a0 Socialcast \u5e10\u6237
+socialcastEmail = Socialcast \u7535\u5b50\u90ae\u4ef6
+socialcastPassword = Socialcast \u5bc6\u7801
+socialcastServer = Socialcast \u670d\u52a1\u5668
+couldNotAuthenticateSocialcastAccnt = \u65e0\u6cd5\u9a8c\u8bc1 Socialcast \u5e10\u6237
 
 #Facebook Signin steps
 fbSigninSteps = \u6dfb\u52a0 facebook \u5e10\u6237\u7684\u6b65\u9aa4:
@@ -217,6 +228,8 @@ couldNotAddLikeToFb = \u65e0\u6cd5\u5411 facebook \u6dfb\u52a0\u201c\u559c\u597d
 couldNotGetComments = \u65e0\u6cd5\u83b7\u5f97\u8bc4\u8bba
 seeAllComments = \u67e5\u770b\u6240\u6709 {0} \u6761\u8bc4\u8bba
 
+#socialcast
+couldNotAddCommentToSC =   \u65e0\u6cd5\u5411 Socialcast \u6dfb\u52a0\u8bc4\u8bba
 #digg
 diggError = Digg \u9519\u8bef: 
 
