Bug: 60251 check in 9 locales for final UI drop and bug fixes into Helix
http://bugzilla.zimbra.com/show_bug.cgi?id=60251

Copied from Perforce
 Change: 321405

--- a/src/zimlet/com_zimbra_social/com_zimbra_social_da.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_da.properties
@@ -230,6 +230,7 @@ seeAllComments = Se alle {0} kommentarer
 
 #socialcast
 couldNotAddCommentToSC =   Kunne ikke tilf\u00f8je kommentar til Socialcast
+couldNotAuthenticateSC = Kan ikke godkende den tilh\u00f8rende Socialcast-konto. Slet den, og tilf\u00f8j den igen, og se, om problemet er l\u00f8st.
 #digg
 diggError = Digg-fejl: 
 
