--- a/src/zimlet/com_zimbra_social/com_zimbra_social_en_GB.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_en_GB.properties
@@ -230,6 +230,7 @@ seeAllComments = See all {0} comments
 
 #socialcast
 couldNotAddCommentToSC =   Could not add Comment to Socialcast
+couldNotAuthenticateSC = Could not authenticate corresponding Socialcast Account. Please delete & re-add it and see if the problem goes away.
 #digg
 diggError = Digg Error: 
 
