--- a/src/zimlet/com_zimbra_social/com_zimbra_social_it.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_it.properties
@@ -230,6 +230,7 @@ seeAllComments = Vedi tutti i {0} commenti
 
 #socialcast
 couldNotAddCommentToSC =   Impossibile aggiungere un Commento a Socialcast
+couldNotAuthenticateSC = Impossibile autenticare account Socialcast. Elimina l'account, quindi, aggiungilo di nuovo e verifica se il problema persiste.
 #digg
 diggError = Errore Digg: 
 
