--- a/src/zimlet/com_zimbra_social/com_zimbra_social_nl.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_nl.properties
@@ -230,6 +230,7 @@ seeAllComments = Bekijk alle {0} opmerkingen
 
 #socialcast
 couldNotAddCommentToSC =   Kan geen opmerking toevoegen aan Socialcast
+couldNotAuthenticateSC = Kan Socialcast-account niet verifi\u00ebren. Verwijder deze, voeg deze opnieuw toe en bekijk of het probleem nog bestaat.
 #digg
 diggError = Digg-fout: 
 
