--- a/src/zimlet/com_zimbra_social/com_zimbra_social_pt_BR.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_pt_BR.properties
@@ -230,6 +230,7 @@ seeAllComments = Ver todos os {0} coment\u00e1rios
 
 #socialcast
 couldNotAddCommentToSC =   N\u00e3o foi poss\u00edvel adicionar um coment\u00e1rio ao Socialcast
+couldNotAuthenticateSC = N\u00e3o foi poss\u00edvel autenticar a conta do Socialcast correspondente. Exclua a conta e adicione-a novamente para ver se resolve o problema.
 #digg
 diggError = Erro do Digg: 
 
