--- a/src/zimlet/com_zimbra_social/com_zimbra_social_sv.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_sv.properties
@@ -230,6 +230,7 @@ seeAllComments = Se alla {0} kommentarer
 
 #socialcast
 couldNotAddCommentToSC =   Det gick inte att l\u00e4gga till kommentaren till Socialcast
+couldNotAuthenticateSC = Det gick inte att autentisera det motsvarande Socialcast-kontot. Ta bort det och l\u00e4gg till det p\u00e5 nytt och se om problemet f\u00f6rsvinner.
 #digg
 diggError = Digg-fel: 
 
