--- a/src/zimlet/com_zimbra_social/com_zimbra_social_zh_HK.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social_zh_HK.properties
@@ -230,6 +230,7 @@ seeAllComments = \u67e5\u770b\u6240\u6709 {0} \u689d\u8a55\u8ad6
 
 #socialcast
 couldNotAddCommentToSC =   \u7121\u6cd5\u52a0\u5165\u8a3b\u91cb\u81f3 Socialcast
+couldNotAuthenticateSC = \u7121\u6cd5\u8a8d\u8b49\u76f8\u61c9\u7684 Socialcast \u5e33\u6236\u3002 \u8acb\u522a\u9664\u8a72\u5e33\u6236\u4e26\u91cd\u65b0\u6dfb\u52a0\uff0c\u4e26\u67e5\u770b\u554f\u984c\u662f\u5426\u6d88\u5931\u3002
 #digg
 diggError = Digg \u932f\u8aa4\uff1a 
 
